--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ attrs==25.4.0
 bcrypt==5.0.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
+dash==2.17.1
+dash-cytoscape==0.3.0
 dataclasses-json==0.6.7
 distro==1.9.0
 frozenlist==1.8.0
@@ -38,6 +40,7 @@ openai==2.8.1
 orjson==3.11.4
 ormsgpack==1.12.0
 packaging==25.0
+pandas==2.2.3
 propcache==0.4.1
 psycopg2-binary==2.9.11
 pydantic==2.12.5
