--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,97 @@
-bcrypt>=4.1.2
-python-dotenv>=1.0.1
-psycopg[binary]>=3.2.3
-pypdf>=4.0.2
-python-docx>=1.1.0
-pandas>=2.2.0
-dash>=2.17.1
-dash-cytoscape>=0.3.0
-langchain>=0.2.11
-langchain-openai>=0.1.0
-langchain-community>=0.2.11
-langchain-text-splitters>=0.2.0
-langgraph>=0.1.11
-openai>=1.30.0
-tiktoken>=0.7.0
-sqlalchemy>=2.0.29
-requests>=2.32.0
-httpx>=0.28.0
-httpx-sse>=0.4.3
-pydantic>=2.7.0
-pydantic-settings>=2.2.1
-attrs>=24.0.0
-numpy>=2.1.0
-orjson>=3.10.0
-tenacity>=8.2.0
-uuid-utils>=0.12.0
-fastapi>=0.100.0
-uvicorn[standard]>=0.23.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+annotated-types==0.7.0
+anyio==4.12.0
+attrs==25.4.0
+bcrypt==5.0.0
+beautifulsoup4==4.14.3
+blinker==1.9.0
+bs4==0.0.2
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.1
+dash==3.3.0
+dash-cytoscape==1.0.2
+dataclasses-json==0.6.7
+distro==1.9.0
+flask==3.1.2
+frozenlist==1.8.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.3
+idna==3.11
+importlib-metadata==8.7.0
+itsdangerous==2.2.0
+jinja2==3.1.6
+jiter==0.12.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==1.1.0
+langchain-classic==1.0.0
+langchain-community==0.4.1
+langchain-core==1.1.0
+langchain-openai==1.1.0
+langchain-text-splitters==1.0.0
+langgraph==1.0.4
+langgraph-checkpoint==3.0.1
+langgraph-prebuilt==1.0.5
+langgraph-sdk==0.2.12
+langsmith==0.4.53
+lxml==6.0.2
+markdown-it-py==4.0.0
+markupsafe==3.0.3
+marshmallow==3.26.1
+mdurl==0.1.2
+multidict==6.7.0
+mypy-extensions==1.1.0
+narwhals==2.13.0
+nest-asyncio==1.6.0
+numpy==2.3.5
+openai==2.8.1
+orjson==3.11.4
+ormsgpack==1.12.0
+packaging==25.0
+pandas==2.3.3
+plotly==6.5.0
+propcache==0.4.1
+psycopg==3.3.1
+psycopg-binary==3.3.1
+psycopg2==2.9.11
+psycopg2-binary==2.9.11
+pydantic==2.12.5
+pydantic-core==2.41.5
+pydantic-settings==2.12.0
+pygments==2.19.2
+pypdf==6.4.0
+pypdf2==3.0.1
+python-dateutil==2.9.0.post0
+python-docx==1.2.0
+python-dotenv==1.2.1
+pytz==2025.2
+pyyaml==6.0.3
+regex==2025.11.3
+requests==2.32.5
+requests-toolbelt==1.0.0
+retrying==1.4.2
+rich==14.2.0
+setuptools==80.9.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.8
+sqlalchemy==2.0.44
+tenacity==9.1.2
+tiktoken==0.12.0
+tqdm==4.67.1
+typing-extensions==4.15.0
+typing-inspect==0.9.0
+typing-inspection==0.4.2
+tzdata==2025.2
+urllib3==2.5.0
+uuid-utils==0.12.0
+werkzeug==3.1.4
+xxhash==3.6.0
+yarl==1.22.0
+zipp==3.23.0
+zstandard==0.25.0
