--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,14 @@ dependencies = [
     "dash>=3.3.0",
     "dash-cytoscape>=1.0.2",
     "pandas>=2.3.3",
+    "python-multipart>=0.0.9",
     "rich>=14.2.0",
-    "bs4>=0.0.2",
+    "beautifulsoup4>=4.12.0",
     "requests>=2.32.5",
+    "fastapi>=0.100.0",
+    "uvicorn[standard]>=0.23.0",
+    "httpx>=0.28.0",
+    "openai>=1.30.0",
+    "pydantic>=2.7.0",
+    "sqlalchemy>=2.0.29",
 ]
